Add before_filter for all the controllers. Add Pages controller with home and about methods/views.

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -6,13 +6,13 @@
     <!--<th>Latitude</th>
     <th>Longitude</th>-->
     <th>Kind</th>
-    <th>Furnished</th>
+    <!--<th>Furnished</th>
     <th>Parking</th>
     <th>Internet</th>
     <th>Tv</th>
     <th>Washing machine</th>
     <th>Dryer</th>
-    <th>Dishwasher</th>
+    <th>Dishwasher</th>-->
     <th>Nb of rooms</th>
     <th>Nb of bathrooms</th>
     <th></th>
@@ -26,13 +26,13 @@
     <!--<td><%= property.latitude %></td>
     <td><%= property.longitude %></td>-->
     <td><%= property.kind %></td>
-    <td><%= property.furnished %></td>
+    <!--<td><%= property.furnished %></td>
     <td><%= property.parking %></td>
     <td><%= property.internet %></td>
     <td><%= property.tv %></td>
     <td><%= property.washing_machine %></td>
     <td><%= property.dryer %></td>
-    <td><%= property.dishwasher %></td>
+    <td><%= property.dishwasher %></td>-->
     <td><%= property.nb_of_rooms %></td>
     <td><%= property.nb_of_bathrooms %></td>
     <td><%= link_to 'Show', property %></td>
