--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,8 @@
     <th>Gender</th>
     <th>First name</th>
     <th>Last name</th>
-    <th>Email</th>
-    <th>Phone</th>
+    <!--<th>Email</th>
+    <th>Phone</th>-->
     <!--<th>Biography</th>-->
     <th>Dob</th>
     <th>Nationality</th>
@@ -22,8 +22,8 @@
       <td><%= user.gender %></td>
     <td><%= user.first_name %></td>
     <td><%= user.last_name %></td>
-    <td><%= user.email %></td>
-    <td><%= user.phone %></td>
+    <!--<td><%= user.email %></td>
+    <td><%= user.phone %></td>-->
     <!--<td><%= user.biography %></td>-->
     <td><%= user.dob %></td>
     <td><%= user.nationality %></td>
@@ -41,5 +41,3 @@
 </table>
 
 <br />
-
-<%= link_to 'New User', new_user_path %>
