--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,11 @@
             <li><%= link_to "Sign in", signin_path %></li>
         <% else %>
             <li>Welcome <%= @current_user.first_name %></li>
+            <li><%= link_to "My account", @current_user %></li>
             <li><%= link_to "Sign out", signout_path %></li>
         <% end %>
 
-        <!--<li> link_to "Home page", root_path </li>-->
+        <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "Properties", properties_path %></li>
         <li><%= link_to "Adverts", adverts_path %></li>
