--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,5 +72,4 @@
 </p>
 -->
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit my profile', edit_user_path(@user) %>
