Inclusion of the database in the git commits. Footer added.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,11 @@
 </nav>
 
 <%= yield %>
-
+<footer>
+    <p>
+        Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT</a>.
+        This project is available on <a href="https://github.com/dlabouesse/accommodationsapp.git">Github</a>.
+    </p>
+</footer>
 </body>
 </html>
