--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,9 @@ nav ul
     font-variant: small-caps;
     font-size: 18px;
 }
+footer
+{
+    border-top: 1px solid #D8D8D8;
+    color: grey;
+    font-style: italic;
+}
