--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Let me help you to find an accommodation or a roommate!</h1>
-<p>Not registered yet? <%= link_to 'Create an account!', new_user_path %></p>
+<p><strong>This web service is totally free of charges!</strong></p>
+<h2></em>Property search section</em></h2>
+<h2>Is it you first visit?</h2>
+<p>
+    You can start by looking over the adverts or you can also search for your fiends or for properties.<br />
+    In order to display users' profile or the details of a property, you must be registered. <%= link_to 'Create my account now!', new_user_path %>
+</p>
