--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <li><%= link_to "Properties", properties_path %></li>
         <li><%= link_to "Adverts", adverts_path %></li>
         <li><%= link_to "Images", images_path %></li>
+        <li><%= link_to "Images", admins_path %></li>
     </ul>
 
 </nav>
