--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Admins#index</h1>
+<%= link_to "Add", admins_add_path %>
+<%= link_to "Remove", admins_remove_path %>
 <p>Find me in app/views/admins/index.html.erb</p>
