--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,8 +34,12 @@
     <% end %>
     <!--<td><%= user.password_digest %></td>-->
     <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= button_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
+    
+    <% if signed_in? && @current_user.admin == true %>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= button_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
+    <% end %>
+
   </tr>
 <% end %>
 </table>
