--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,16 @@
         <% end %>
 
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Users", users_path %></li>
-        <li><%= link_to "Properties", properties_path %></li>
         <li><%= link_to "Adverts", adverts_path %></li>
-        <li><%= link_to "Images", images_path %></li>
-        <li><%= link_to "Admins", admins_index_path %></li>
+        <li><%= link_to "Properties", properties_path %></li>
+        <li><%= link_to "Users", users_path %></li>
+
+
+        <% if signed_in? && @current_user.admin == true %>
+            <li><%= link_to "Images", images_path %></li>
+            <li><%= link_to "Admins", admins_index_path %></li>
+        <% end %>
+
     </ul>
 
 </nav>
