--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Let me help you to find an accommodation or a roommate!</h1>
 <p><strong>This web service is totally free of charges!</strong></p>
-<h2></em>Property search section</em></h2>
+<h2>Advert search section</h2>
+<p><em>This section is to allow vsitors to search adverts.</em></p>
 <h2>Is it you first visit?</h2>
 <p>
     You can start by looking over the adverts or you can also search for your fiends or for properties.<br />
