--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <h1>Let me help you to find an accommodation or a roommate!</h1>
 <p><strong>This web service is totally free of charges!</strong></p>
 <h2>Advert search section</h2>
-<p><em>This section is to allow vsitors to search adverts.</em></p>
+<p><em>This section is to allow visitors to search adverts.</em></p>
+    <form>
+    <label for="author_tokens">Authors:</label>
+    <input type="text" name="author_tokens" id="author_tokens" >
+    </form>
 <h2>Is it you first visit?</h2>
 <p>
     You can start by looking over the adverts or you can also search for your fiends or for properties.<br />
