Usage of complete_name for search field

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
 <h2>Advert search section</h2>
 <p><em>This section is to allow visitors to search adverts.</em></p>
     <form>
-    <label for="author_tokens">Authors:</label>
-    <input type="text" name="author_tokens" id="author_tokens" >
+    <label for="user_tokens">User's name:</label>
+    <input type="text" name="user_tokens" id="user_tokens" >
     </form>
 <h2>Is it you first visit?</h2>
 <p>
