--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= stylesheet_link_tag "application", "token-input" %>
-  <%= javascript_include_tag 'jquery-1.6.2', 'application' %>
-  <%= javascript_include_tag "jquery.tokeninput" %>
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag "jquery.tokeninput", "bootstrap.min" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -24,45 +25,51 @@
 </div>
 <% end %>
 
-<header class="page-header">
-    <h1>AccomodationsApp</h1>
-</header>
-
-<div class="container">
-    <div class="row">
-        <nav>
-            <ul>
-                <% if !signed_in? %>
-                    <li><%= link_to "Sign in", signin_path %></li>
-                <% else %>
-                    <li>Welcome <%= @current_user.first_name %></li>
-                    <li><%= link_to "My account", @current_user %></li>
-                    <li><%= link_to "Sign out", signout_path %></li>
-                <% end %>
-
-                <li><%= link_to "Home", root_path %></li>
+<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><%= link_to "Home", root_path, { :class=>"navbar-brand" } %></li>
                 <li><%= link_to "Adverts", adverts_path %></li>
                 <li><%= link_to "Properties", properties_path %></li>
                 <li><%= link_to "Users", users_path %></li>
-
-
-                <% if signed_in? && @current_user.admin == true %>
-                    <li><%= link_to "Images", images_path %></li>
-                    <li><%= link_to "Admins", admins_index_path %></li>
-                <% end %>
-
             </ul>
-        </nav>
+            <ul class="nav navbar-nav navbar-right">
+                <% if !signed_in? %>
+                    <li><%= link_to "Sign in", signin_path %></li>
+                <% else %>
+                    <% if @current_user.admin == true %>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><%= link_to "Images", images_path %></li>
+                                <li><%= link_to "Admins", admins_index_path %></li>
+                            </ul>
+                        </li>
+                    <% end %>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.first_name %><span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><%= link_to "My account", @current_user %></li>
+                            <li><%= link_to "Sign out", signout_path %></li>
+                        </ul>
+                    </li>
+                <% end %>
+            </ul>
+        </div><!--/.nav-collapse -->
     </div>
-
-    <div class="row">
-<%= yield %>
-    </div>
-
+</nav>
+<!--
+<header class="page-header">
+    <h1>AccomodationsApp</h1>
+</header>
+-->
+<div class="container">
+    <%= yield %>
 </div>
 
 <footer>
-    <p>
+    <p class="container">
         Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT</a>.
         This project is available on <a href="https://github.com/dlabouesse/accommodationsapp.git">Github</a>.
     </p>
