Main layout improved and layout for flash messages added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 <div class="flash_message">
     <div class="container">
         <div class="row">
-            <p class="col-md-8 col-md-offset-2">
-                <div class="flash_<%= key %>"><%= key %> : <%= value %></div>
+            <p class="col-md-8 col-md-offset-2 flash_<%= key %>">
+                <%= value %>
             </p>
         </div>
     </div>
