--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,10 +28,21 @@ body {
     font-variant: small-caps;
 }
 
-.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
+.navbar-inverse .navbar-nav > li > a {
     color: white;
     font-family: 'Amaranth', sans-serif;
     font-size: 1.2em;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li.open > a {
+    background: #2F9010;
+    background: -moz-linear-gradient(top,  #329F0A 0%, #195E00 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#329F0A), color-stop(100%,#195E00)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #329F0A 0%,#195E00 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #329F0A 0%,#195E00 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #329F0A 0%,#195E00 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #329F0A 0%,#195E00 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#329F0A', endColorstr='#195E00',GradientType=0 ); /* IE6-9 */
 }
 
 .navbar-fixed-top {
@@ -50,8 +61,6 @@ h2 {
     color: #46B223;
     font-size: 20px;
     padding-left: 5%;
-    margin-bottom: 3%;
-    margin-top: 3%;
     padding-left: 20px;
 }
 
@@ -66,6 +75,27 @@ footer {
     font-style: italic;
 }
 
+.container > .row {
+    margin-bottom: 35px;
+}
+
+.flash_message {
+    position: fixed;
+    width: 100%;
+    margin-top: 2px;
+}
+
+.flash_message p {
+    text-align: center;
+    background-color: #FF6666;
+    background: linear-gradient(to bottom,  #FB0101 0%,#FF5A5A 100%); /* W3C */
+    border-radius: 3px;
+}
+
+.flash_message p.flash_success {
+    background-color: #FF7D12;
+    background: linear-gradient(to bottom,  #FF7D12 0%,#FF9A47 100%); /* W3C */
+}
 /*
 div
 {
