--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="row">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
@@ -11,51 +11,63 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :gender %><br />
-    <%= f.select(:gender, options_for_select([["Mr", "Mr"],["Mrs", "Mrs"],["Miss", "Miss"]])) %>
+  <div class="row">
+      <div class="field col-xs-12">
+        <%= f.label :gender %>
+        <%= f.select(:gender, options_for_select([["Mr", "Mr"],["Mrs", "Mrs"],["Miss", "Miss"]])) %>
+      </div>
+      <div class="field col-sm-6">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
+      </div>
+      <div class="field col-sm-6">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+  <div class="row">
+      <div class="field col-xs-6">
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field col-xs-6">
+        <%= f.label :phone %>
+        <%= f.text_field :phone %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+  <div class="field row">
+     <div class="field col-xs-12">
+        <%= f.label :biography %><br />
+        <%= f.text_area :biography %>
+     </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+  <div class="row">
+      <div class="field col-sm-6">
+        <%= f.label :dob %>
+        <%= f.date_select :dob, :end_year => 1915, :start_year => 2015 %>
+      </div>
+      <div class="field col-sm-6">
+        <%= f.label :nationality %>
+        <%= f.text_field :nationality %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
+  <div class="field row">
+      <div class="field col-xs-12">
+        <%= f.label :property_id %>
+        <%= f.collection_select :property_id, Property.all, :id, :address, :include_blank => true %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :biography %><br />
-    <%= f.text_area :biography %>
+  <div class="row">
+      <div class="field col-sm-6">
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </div>
+      <div class="field col-sm-6">
+          <%= f.label :password_confirmation, 'Confirmation' %>
+          <%= f.password_field :password_confirmation %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :dob %><br />
-    <%= f.date_select :dob, :end_year => 1915, :start_year => 2015 %>
-  </div>
-  <div class="field">
-    <%= f.label :nationality %><br />
-    <%= f.text_field :nationality %>
-  </div>
-  <div class="field">
-    <%= f.label :property_id %><br />
-    <%= f.collection_select :property_id, Property.all, :id, :address, :include_blank => true %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
+  <div class="row actions center">
     <%= f.submit %>
   </div>
 <% end %>
