--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.first_name %><span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <% if @current_user.property != nil %>
+                                <li><%= link_to "My advert", @current_user.property.advert %></li>
+                            <% else %>
+                                <li><%= link_to "New advert", new_advert_path %></li>
+                            <% end %>
                             <li><%= link_to "My account", @current_user %></li>
                             <li><%= link_to "Sign out", signout_path %></li>
                         </ul>
