--- a/app/views/usermailer/register.html.erb
+++ b/app/views/usermailer/register.html.erb
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Accommodationsapp</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
-  <%= stylesheet_link_tag    "application", "token-input" %>
-  <%= csrf_meta_tags %>
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
 
-<div class="container">
     <h1>Welcome to the the best website to find you future accommodation or roommate!</h1>
     <p>You have successfully signed up.<br />
         You can know enjoy the full functionalities of the website!
     </p>
     <p>Hope to see you soon!</p>
-</div>
 
-<footer>
-    <p class="container">
+    <hr />
+    <p>
         Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT</a>.
         This project is available on <a href="https://github.com/dlabouesse/accommodationsapp.git">Github</a>.
     </p>
-</footer>
 
 </body>
 </html>
