--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-    <h1>Let me help you to find an accommodation or a roommate!</h1>
-    <p><strong>This web service is totally free of charges!</strong></p>
+    <h1 class="col-xs-12">Let me help you to find an accommodation or a roommate!</h1>
+    <p class="col-xs-12"><strong>This web service is totally free of charges!</strong></p>
 </div>
 
 <div class="row">
