--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,10 +49,15 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.first_name %><span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <% if @current_user.property != nil %>
-                                <li><%= link_to "My advert", @current_user.property.advert %></li>
+                            <% if @current_user.property == nil %>
+                                <li><%= link_to "New property", new_property_path %></li>
                             <% else %>
-                                <li><%= link_to "New advert", new_advert_path %></li>
+                                <li><%= link_to "My property", @current_user.property %></li>
+                                <% if @current_user.property.advert == nil %>
+                                    <li><%= link_to "New advert", new_advert_path %></li>
+                                <% else %>
+                                    <li><%= link_to "My advert", @current_user.property.advert %></li>
+                                <% end %>
                             <% end %>
                             <li><%= link_to "My account", @current_user %></li>
                             <li><%= link_to "Sign out", signout_path %></li>
