Search box for roommates when adding a property added. Existing properties can now be linked to users. Users can leave a property. If nobody lives in a property, the property is destroyed.

--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,14 @@
-<h1>New property</h1>
+<h1>Your property</h1>
+<h2>Search for my property</h2>
+<p>
+    Please use the search box below to search for your property.<br />
+    Enter the name of one of your roommates to automatically link the property to your account!
+</p>
+<form>
+    <label for="roommate_tokens">User's name:</label>
+    <input type="text" name="roommate_tokens" id="roommate_tokens" >
+</form>
+<h2>New property</h2>
 
 <%= render 'form' %>
 
