--- a/app/views/adverts/show.html.erb
+++ b/app/views/adverts/show.html.erb
@@ -19,12 +19,7 @@
         <%= link_to @advert.user.complete_name, @advert.user %>
     <% end %>
 </p>
-<!--
-<p>
-  <b>Expiration date:</b>
-  <%= @advert.expiration_date %>
-</p>
--->
+
 <p>
   <b>Property:</b>
   <% if @advert.property_id == nil %>
@@ -52,7 +47,9 @@
   <%= @advert.nb_of_free_beds %>
 </p>
 
-<% if signed_in? && @advert.user_id == @current_user.id %>
+<%# All people living in the property must can modify/delete the referring advert %>
+
+<% if signed_in? && @advert.property_id == @current_user.property_id %>
     <%= link_to 'Edit', edit_advert_path(@advert) %><br />
     <%= link_to 'Delete my advert', @advert, confirm: 'Are you sure?', method: :delete %>
 <% end %>
