--- a/app/views/adverts/show.html.erb
+++ b/app/views/adverts/show.html.erb
@@ -1,55 +1,45 @@
-<h1>Advert details</h1>
-<p id="notice"><%= notice %></p>
+<div class="row">
+    <h1 class="col-xs-12">Advert details</h1>
+</div>
 
-<p>
-  <b>Content:</b>
-  <%= simple_format(@advert.content) %>
-</p>
-
-<p>
-  <b>Rent:</b>
-  <%= @advert.rent %> €
-</p>
-
-<p>
-    <b>Created by:</b>
-    <% if @advert.user_id == nil %>
-        Error! An advert must have an user !
-    <% else %>
-        <%= link_to @advert.user.complete_name, @advert.user %>
-    <% end %>
-</p>
-
-<p>
-  <b>Property:</b>
-  <% if @advert.property_id == nil %>
-      Error! An advert must have a property !
-  <% else %>
-      <%= link_to @advert.property.address, @advert.property %>
-  <% end %>
-
-</p>
-
-<p>
-    <b>Images:</b>
-<% if @advert.images.empty? %>
-        This advert have no images.
-        <%= link_to 'Add an image.', new_image_path %>
-<% else %>
-    <% @advert.images.each do |a| %>
-        <%= image_tag(a.name, :height => "300") %>
-    <% end %>
-<% end %>
-</p>
-
-<p>
-  <b>Nb of free beds:</b>
-  <%= @advert.nb_of_free_beds %>
-</p>
-
-<%# All people living in the property must can modify/delete the referring advert %>
-
-<% if signed_in? && @advert.property_id == @current_user.property_id %>
-    <%= link_to 'Edit', edit_advert_path(@advert) %><br />
-    <%= link_to 'Delete my advert', @advert, confirm: 'Are you sure?', method: :delete %>
-<% end %>
+<div class="row">
+    <div class="col-md-6">
+        <h2>
+            <% if @advert.user_id == nil %>
+                Error! An advert must have an user !
+            <% else %>
+                Created <%= time_ago_in_words(@advert.created_at) %> ago by <%= link_to @advert.user.complete_name, @advert.user %>
+            <% end %>
+        </h2>
+        <p>
+            <%= simple_format(@advert.content) %>
+        </p>
+        <h2>
+            <%= pluralize(@advert.nb_of_free_beds, 'bed') %> for <strong><%= @advert.rent %> €</strong>
+        </h2>
+        <p>
+            <% if @advert.property_id == nil %>
+                Error! An advert must have a property !
+            <% else %>
+                <strong><%= link_to @advert.property.address, @advert.property %></strong>
+            <% end %>
+        </p>
+        <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?size=450x300&zoom=14&markers="+@advert.property.latitude.to_s+","+@advert.property.longitude.to_s %>
+        <p>
+            <%# All people living in the property must can modify/delete the referring advert %>
+            <% if signed_in? && @advert.property_id == @current_user.property_id %>
+                <%= link_to 'Edit', edit_advert_path(@advert) %><br />
+                <%= button_to 'Delete my advert', @advert, confirm: 'Are you sure?', method: :delete %>
+            <% end %>
+        </p>
+    </div>
+    <div class="col-md-6 advert_show_image">
+        <% if @advert.images.empty? %>
+                This advert have no images.
+        <% else %>
+            <% @advert.images.each do |a| %>
+                <%= image_tag(a.name) %>
+            <% end %>
+        <% end %>
+    </div>
+</div>
